--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -6,7 +6,7 @@
   <header class="m_bottom_30 d_table w_full">
     <!--logo-->
     <div class="d_table_cell half_column v_align_m">
-      <a href="index.html">
+      <a href="/">
         <img src="images/logo_side.png" alt="">
       </a>
     </div>
@@ -335,9 +335,9 @@
         <!--logo-->
         <div class="d_table w_full d_xs_block t_xs_align_c">
           <div class="col-lg-4 col-md-4 col-sm-4 d_table_cell d_xs_block p_xs_hr_0 v_align_m f_none m_xs_bottom_20">
-            <a href="index.html" class="d_inline_m">
+            <a href="/" class="d_inline_m">
 
-              <img src="images/logo06.png" alt="">
+              <img src="images/virtu-logo.png" alt="">
             </a>
           </div>
           <div class="col-lg-8 col-md-6 col-sm-8 d_table_cell d_xs_block p_xs_hr_0 v_align_m f_none t_align_r t_xs_align_c">
