--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Monetize Content</h5>
-                  <p class="m_bottom_23">The potential to earn money (PANDAS) is unlimited. You'll never have to worry about demonetization again. </p>
+                  <p class="m_bottom_23">Ad-free content monetization forever. The potential to earn money (Virtucoins) is unlimited. You'll never have to worry about demonetization again. </p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -36,7 +36,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Anti-censorship</h5>
-                  <p class="m_bottom_23">The VirtuTV platform is completely decentralzied, so you'll never have to worry about your content being removed or your breaking story being censored.</p>
+                  <p class="m_bottom_23">The VirtuTV platform is completely decentralized. So you'll never have to worry about your content being removed or your breaking story (For journalists) being censored.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -63,7 +63,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Ethereum Network</h5>
-                  <p class="m_bottom_23">VirtuTV coins use Ethereum's smart contract technology. The ledger is public and immutable.</p>
+                  <p class="m_bottom_23">Virtucoins use Ethereum's smart contract technology. The ledger is public and immutable.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -75,7 +75,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Anonymity</h5>
-                  <p class="m_bottom_23">Creators' can remain anonymous on the VirtuTV platform and may receive money (PANDAS) completely anonymously as well.</p>
+                  <p class="m_bottom_23">Creators' can remain anonymous on the VirtuTV platform, and may receive Virtucoins completely anonymously as well. An excellent feature for citizen and investigative journalists, creators' can set bounties on their content, break the story, and collect their rewards.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -87,7 +87,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Earnings</h5>
-                  <p class="m_bottom_23">Creators keep 100% of the money. Always. We don't charge anything. Ever. </p>
+                  <p class="m_bottom_23">Our mission is to treat creators' fairly. Creators' keep 95% of the money they earn on the VirtuTV platform. </p>
                 </figcaption>
               </figure>
             </div>
@@ -140,7 +140,7 @@
                   <ul class="color_light fw_light">
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>ERC20 Standard Ethereum Token</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>VirtuTV Tokens are distributed <strong class="color_light">by smart contract</strong></li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Symbol Name: PNDA</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Symbol Name: VRTU</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 80% To Users</li>
                   </ul>
                 </div>
@@ -148,7 +148,7 @@
                   <ul class="color_light fw_light">
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>100,000,000 Tokens in Total Supply</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Unadjustable Total Supply</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Price Per Token: 1 ETH = 160 PNDA</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Price Per Token: 1 ETH = 160 VRTU</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 20% To The VirtuTV Team</li>
                   </ul>
                 </div>
@@ -167,13 +167,13 @@
               <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for various cryptocurrencies, creator profiles, and the option to set pricing for your content. Other features include social media sharing for you to reach more people. </p>
 
               <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Tokens</h5>
-              <p class="fs_large m_bottom_45 fw_light">The VirtuTV platform includes support for the ETH, BTC and PNDA cryptocurrencies. </p>
+              <p class="fs_large m_bottom_45 fw_light">The VirtuTV platform will include support for the ETH, BTC and VRTU cryptocurrencies. </p>
 
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Videos</h5>
-              <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for the ETH, BTC and PNDA cryptocurrencies; creator profiles, and the option to set pricing for your content. Other features include social media sharing for you to reach more people. </p>
+              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
+              <p class="fs_large m_bottom_45 fw_light">The platform will be the home for ad-free, high-quality videos. Some of the features of the platform include unlimited video uploads, user profile and dashboard, private link sharing, priority support, and much more. </p>
 
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Playback</h5>
-              <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for the ETH, BTC and PNDA cryptocurrencies; creator profiles, and the option to set pricing for your content. Other features include social media sharing for you to reach more people. </p>
+              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization</h5>
+              <p class="fs_large m_bottom_45 fw_light">Perpetually monetize any video in seconds. VirtuTV uses the innate power of the crowd to crowdfund creator videos. Creators' have three options for video monetization: price setting of the content, receiving rewards on a one-time, direct, peer-to-peer basis, and receiving rewards per time interval i.e., monthly.</p>
 
             </div>
             <div class="col-lg-7 col-md-7" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
@@ -190,7 +190,7 @@
           <p class="fs_large m_bottom_45 fw_light">VirtuTV release timeline. </p>
         </div>
       </section>
-      <section class="timeline">
+      <section class="timeline image_bg_17">
         <ul>
           <li>
             <div class="fw_light">
