--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,8 @@
       <!--header image-->
       <section class="image_bg_6 darkness relative vc_child t_align_c">
         <div class="container">
-          <h1 class="color_light fw_light m_bottom_15">A Decentralized Video Platform</h1>
-          <p class="m_bottom_25 color_grey_light_3">VirtuTV is a project aimed at developing a next-generation video <br> creators' platform for Web 3.0.</p> 
+          <h1 class="color_light fw_light m_bottom_15">Decentralized Video Monetization Platform</h1>
+          <p class="m_bottom_25 color_grey_light_3">VirtuTV is a project aimed at developing a next-generation video <br> monetization platform for Web 3.0.</p> 
           <div class="d_inline_b clearfix selectbuttons">
             <a href="/crowdsale" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_medium tt_uppercase f_left">Contribute to Crowdsale</a>
             <div class="f_left or color_light tt_uppercase d_xs_none">or</div>
@@ -14,7 +14,7 @@
       <!--content-->
       <section class="section_offset">
         <div class="container t_align_c">
-          <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">Get Paid, Not Demonetized</h3>
+          <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">Ad-free Video Monetization</h3>
           <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">You're a star creator. It's time you were treated like one. </p>
           <div class="row t_align_c">
             <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
@@ -109,8 +109,8 @@
             </div>
             <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Our Mission</h3>
-              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV is a decentralized video platform that gives creators of all backgrounds the ability to earn a living without restrictions from editors, employers, or advertisers. Creators' can maintain their anonymity on the platform, if they choose to do so.</p>
-              <p class="fs_large fw_light m_bottom_45 color_light">We believe that content censorship will cease only by cutting out the central authority that oftentimes suppresses valuable content from the people.</p>
+              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV is a decentralized video platform that gives creators of all backgrounds the ability to earn a living without restrictions from editors, employers, or advertisers. Creators' can maintain their anonymity on the platform and contribute to other creators'.</p>
+              <p class="fs_large fw_light m_bottom_45 color_light">We believe that video content and information should be censorship-free. That's why we created VirtuTV to be censorship resistant.</p>
               <a href="#" class="color_green fs_medium button_type_3 tr_all r_corners tt_uppercase d_inline_b">Download Whitepaper</a>
             </div>
           </div>
@@ -120,7 +120,7 @@
       <section class="section_offset bg_light_2 p_bottom_0">
         <div class="container t_align_c">
           <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
-          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for journalists', video bloggers, and podcasters. The content can never be deleted or edited because it lives on the blockchain. VirtuTV is built using blockchain technology and its smart contracts are deployed on the Ethereum Network.</p>
+          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for journalists', video bloggers, and podcasters. VirtuTV is built using blockchain technology and its smart contracts are deployed on the Ethereum Network. The content will never be deleted or edited. </p>
           <div class="relative screens">
             <img class="layer_2" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="600" width="60%" height="80%">
 
@@ -233,7 +233,7 @@
               <p>You can collaborate with others about the VirtuTV Project.</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4" data-appear-animation="fadeInUp" data-appear-animation-delay="200">
-              <a href="" id="get_started" class="button_type_4 r_corners d_inline_b color_green tt_uppercase fs_large m_top_5 m_sm_top_25 tr_all">        <img src="https://png.icons8.com/slack/color/24" title="Slack" width="24" height="24">  Join Slack</a>
+              <a href="https://virtutv.herokuapp.com/" id="get_started" class="button_type_4 r_corners d_inline_b color_green tt_uppercase fs_large m_top_5 m_sm_top_25 tr_all">        <img src="https://png.icons8.com/slack/color/24" title="Slack" width="24" height="24">  Join Slack</a>
             </div>
           </div>
         </div>
