--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -11,30 +11,90 @@
     <h3 class="color_dark fw_light m_bottom_15 heading_1 t_align_c">The Team</h3>
     <p class="m_bottom_35 heading_2 t_align_c">We are a fantastic team of passionate developers with a penchant for blockchain technologies. </p>
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-6 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
         <!--person team-->
         <figure class="t_align_c">
-          <img src="images/vp.png" alt="" class="r_corners m_bottom_23" width="150px" height="150px">
+          <img src="images/pavank.png" alt="" class="r_corners m_bottom_23" height="240px" width="280px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">Vincent Porta</a></h4>
-            <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, VirtuTV</i>
-            <p class="m_bottom_15">Vincent is a full stack developer with significant Node.js experience with building scalable applications. </p>
+            <h4 class="m_bottom_5"><a href="#" class="color_dark">Pavan Katepalli</a></h4>
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
+            <p class="m_bottom_15">Pavan is a seasoned internet and education entrepreneur with significant startup experience and experience scaling organizations. He is the founder of Inrtracker.com, a personal health management tool designed for Warfarin patients, and Chief Learning Officer of Trilogy Education Services.</p>
             <ul class="d_inline_b social_icons">
-              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://twitter.com/viiiiiinnn" class="color_grey_light_2 twitter circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-twitter-1"></i></a></li>
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
             </ul>
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
         <!--person team-->
         <figure class="t_align_c">
-          <img src="images/pavan.jpeg" alt="" class="r_corners m_bottom_23">
+          <img src="images/vinp.jpg" alt="" class="r_corners m_bottom_23" height="240px" width="280px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">Pavan Katepalli</a></h4>
-            <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, VirtuTV</i>
-            <p class="m_bottom_15">Pavan is an internet and education entrepreneur with both startup experience and experience scaling organizations.</p>
+            <h4 class="m_bottom_5"><a href="#" class="color_dark">Vincent Porta</a></h4>
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
+            <p class="m_bottom_15">Vincent is a full-stack and open source developer that is passionate about technology. Vincent has built a few notable NPM packages to date, currently freelances and works as an online tutor.</p>
             <ul class="d_inline_b social_icons">
-              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://twitter.com/pavankat" class="color_grey_light_2 twitter circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-twitter-1"></i></a></li>
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/vincent-porta-50952949/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+            </ul>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+        <!--person team-->
+        <figure class="t_align_c">
+          <img src="images/nickw.png" alt="" class="r_corners m_bottom_23" height="240px" width="280px">
+          <figcaption>
+            <h4 class="m_bottom_5"><a href="#" class="color_dark">Nick West</a></h4>
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">React & React Native developer</i>
+            <p class="m_bottom_15">Nick has been working as a technologist and technology educator at Rutgers University for seven years. He is currently working as an Instructional Designer & Program Coordinator at Rutgers University School Of Social Work. </p>
+            <ul class="d_inline_b social_icons">
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/nick-west-67471742/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+            </ul>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+        <!--person team-->
+        <figure class="t_align_c">
+          <img src="images/williamv.png" alt="" class="r_corners m_bottom_23" height="240px" width="280px">
+          <figcaption>
+            <h4 class="m_bottom_5"><a href="#" class="color_dark">William Vasquez</a></h4>
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">Full-stack developer</i>
+            <p class="m_bottom_15">William is a full-stack web development professional bringing years of experience in different roles in both large and small companies. William is currently building applications for Citibank.</p>
+            <ul class="d_inline_b social_icons">
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/williamavasquez/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+            </ul>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+        <!--person team-->
+        <figure class="t_align_c">
+          <img src="images/dzmitry.png" alt="" class="r_corners m_bottom_23" height="240px" width="280px">
+          <figcaption>
+            <h4 class="m_bottom_5"><a href="#" class="color_dark">Dzmitry Dubarau</a></h4>
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">Full-stack developer</i>
+            <p class="m_bottom_15">Dzmitry is a full-stack web developer professional proficient in several languages including JavaScript and C#. Dzmitry is fluent in Russian and Belorussian and holds a degree in Veterinary Medicine. </p>
+            <ul class="d_inline_b social_icons">
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/ddzmitry/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+            </ul>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+        <!--person team-->
+        <figure class="t_align_c">
+          <img src="images/mattd.png" alt="" class="r_corners m_bottom_23" height="240px" width="280px">
+          <figcaption>
+            <h4 class="m_bottom_5"><a href="#" class="color_dark">Matt Davis</a></h4>
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">Software developer</i>
+            <p class="m_bottom_15">Matt has built dozens of web apps using JavaScript and Node.js. Matt is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and even game development.  
+            </p>
+            <ul class="d_inline_b social_icons">
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
             </ul>
           </figcaption>
         </figure>
@@ -45,7 +105,7 @@
 
 <section class="section_offset image_bg_5">
   <div class="container t_align_c">
-    <h3 class="color_light fw_light m_bottom_25 heading_1 t_align_c">If you are talented, highly motivated, hardworking,<br>passionate about your work and want to join our team, contact us below. </h3>
+    <h3 class="color_light fw_exbold m_bottom_25 heading_1 t_align_c">If you are talented, highly motivated, hardworking,<br>passionate about your work and want to join our team, contact us below. </h3>
     <a href="mailto:virtutv@protonmail.com" class="button_type_4 d_inline_b color_purple r_corners tt_uppercase fs_large tr_all">Contact Us</a>
   </div>
 </section>
