--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2732,7 +2732,7 @@ hr{
 .image_bg_2{background:url("../images/image_bg_2.jpg") no-repeat;}
 .image_bg_3{background:url("../images/image_bg_3.jpg") no-repeat;}
 .image_bg_4{background:url("../images/image_bg_5.jpg") no-repeat;}
-.image_bg_5{background:url("../images/newspaper.jpeg") no-repeat;}
+.image_bg_5{background:-webkit-linear-gradient(270deg, rgba(9, 14, 27, .45), rgba(9, 14, 27, .45)),url("../images/flatiron.jpg") no-repeat;}
 .image_bg_6{background:-webkit-linear-gradient(270deg, rgba(9, 14, 27, .45), rgba(9, 14, 27, .45)),url("../images/abstract01.jpeg") no-repeat;}
 .image_bg_7{background: -webkit-linear-gradient(270deg, rgba(9, 14, 27, .45), rgba(9, 14, 27, .45)),url("../images/abstract01.jpeg") no-repeat;}
 .image_bg_8{background:url("../images/home_img_19.jpg") no-repeat;}
