--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -22,7 +22,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">VirtuTV is a decentralized news platform for journalists and content creators. It uses the PNDAs currency, the defacto currency of the VirtuTV Project.</dd>
+                <dd class="fw_light color_dark">VirtuTV is a decentralized news platform for journalists and content creators. It uses the VRTUs currency, the defacto currency of the VirtuTV Project.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">What can you do with VirtuTV?
@@ -33,10 +33,10 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">Monetize your journalistic content, share it on social media, remain anonymous if desired, compete with other journalists to earn reputation points and earn PNDAs.</dd>
+                <dd class="fw_light color_dark">Monetize your journalistic content, share it on social media, remain anonymous if desired, compete with other journalists to earn reputation points and earn VRTUs.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
-                <dt class="accordion_link relative color_dark tr_all"> Will more Pandacoins be sold?
+                <dt class="accordion_link relative color_dark tr_all"> Will more Virtucoins be sold?
                   <span class="icon_wrap_size_1 circle d_block hide">
                     <i class="icon-minus"></i>
                   </span>
@@ -44,7 +44,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">No. To provide the upmost transparency and stability to the community, only the Pandacoins issued during the crowdsale will be sold. </dd>
+                <dd class="fw_light color_dark">No. To provide the upmost transparency and stability to the community, only the Virtucoins issued during the crowdsale will be sold. </dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">Is it free to create an account?
@@ -66,7 +66,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">For the alpha product, PNDA's will be the currency of the VirtuTV Platform. Once the beta is finished, we will introduce Bitcoin and Ether.</dd>
+                <dd class="fw_light color_dark">For the alpha product, VRTU's will be the currency of the VirtuTV Platform. Once the beta is finished, we will introduce Bitcoin and Ether.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">Will I be able to earn money on the platform?
@@ -77,7 +77,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">Yes. All users can earn money by setting pricing and receiving perks for their journalism in the form of PNDA's, which is the currency of the VirtuTV Platform.</dd>
+                <dd class="fw_light color_dark">Yes. All users can earn money by setting pricing and receiving perks for their journalism in the form of VRTU's, which is the currency of the VirtuTV Platform.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">How long until rollout after the crowdsale?
@@ -99,7 +99,18 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">Once you contribute to the crowdsale, you will receive an invite via email to our platform. Continue to check our website and slack/social media channels for announcements.</dd>
+                <dd class="fw_light color_dark">After you contribute to the crowdsale, you will receive an welcome invitation via email to the VirtuTV platform. Continue to check our website and slack/social media channels for announcements.</dd>
+              </dl>
+              <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
+                <dt class="accordion_link relative color_dark tr_all">How do I contribute to the VirtuTV Crowdsale?
+                  <span class="icon_wrap_size_1 circle d_block hide">
+                    <i class="icon-minus"></i>
+                  </span>
+                  <span class="icon_wrap_size_1 circle d_block show">
+                    <i class="icon-plus"></i>
+                  </span>
+                </dt>
+                <dd class="fw_light color_dark">The crowdsale begins July 28th, 2017. We will provide periodic updates on our website and on our blog. Subscribe to our <a href="/crowdsale">newsletter</a> and our <a href="https://medium.com/@virtu.tv" target="_blank">Medium blog</a>. </dd>
               </dl>
             </div>
           </div>
