--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -183,7 +183,7 @@
         </ul>
       </li>
       <li class="has_sub_menu m_bottom_10">
-        <a href="https://medium.com/@_" class="d_block relative fs_large color_light_2 color_blue_hover" target="_blank">Blog</a>
+        <a href="https://medium.com/@virtu.tv" class="d_block relative fs_large color_light_2 color_blue_hover" target="_blank">Blog</a>
         <!--sub menu(second level)-->
         <ul class="d_none m_top_10">
           <li class="has_sub_menu m_bottom_10">
@@ -345,7 +345,7 @@
               <li class="m_right_8"><a href="" class="color_grey_light facebook circle icon_wrap_size_1 d_block"><i class="icon-facebook-1"></i></a></li>
               <li class="m_right_8"><a href="" class="color_grey_light twitter circle icon_wrap_size_1 d_block"><i class="icon-twitter-1"></i></a></li>
               <li class="m_right_8"><a href="" class="color_grey_light github circle icon_wrap_size_1 d_block"><i class="icon-github-squared"></i></a></li>
-              <li class="m_right_8"><a href="" class="color_grey_light linkedin circle"><i class="fa fa-reddit fa-lg"></i></a></li>
+              <li class="m_right_8"><a href="" class="color_grey_light github circle"><i class="fa fa-reddit fa-lg"></i></a></li>
             </ul>
             <br>
             <ul class="hr_list fs_small color_grey_light d_inline_b">
@@ -380,11 +380,11 @@
               </a>
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
-              <a class="color_dark fs_large relative r_xs_corners" href="" target="_blank"><img src="https://png.icons8.com/slack/color/24" title="Slack" width="15" height="15" style="margin-top: 5px"> Slack
+              <a class="color_dark fs_large relative r_xs_corners" href="https://virtutv.herokuapp.com/" target="_blank"><img src="https://png.icons8.com/slack/color/24" title="Slack" width="15" height="15" style="margin-top: 5px"> Slack
               </a>
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
-              <a class="color_dark fs_large relative r_xs_corners" href="" target="_blank">Blog
+              <a class="color_dark fs_large relative r_xs_corners" href="https://medium.com/@virtu.tv" target="_blank">Blog
               </a>
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
