--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
       <section class="image_bg_6 darkness relative vc_child t_align_c">
         <div class="container">
           <h1 class="color_light fw_light m_bottom_15">Decentralized Video Monetization Platform</h1>
-          <p class="m_bottom_25 color_grey_light_3">VirtuTV is a project aimed at developing a next-generation video <br> monetization platform for Web 3.0.</p> 
+          <p class="m_bottom_25 color_grey_light_3 fs_large">VirtuTV is a project aimed at developing a next-generation video consumption <br>and monetization platform for Web 3.0.</p> 
           <div class="d_inline_b clearfix selectbuttons">
             <a href="/crowdsale" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_medium tt_uppercase f_left">Contribute to Crowdsale</a>
             <div class="f_left or color_light tt_uppercase d_xs_none">or</div>
@@ -14,7 +14,7 @@
       <!--content-->
       <section class="section_offset">
         <div class="container t_align_c">
-          <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">Ad-free Video Monetization</h3>
+          <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">Video Consumption & Monetization</h3>
           <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">You're a star creator. It's time you were treated like one. </p>
           <div class="row t_align_c">
             <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
@@ -24,7 +24,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Monetize Content</h5>
-                  <p class="m_bottom_23">Ad-free content monetization forever. The potential to earn money (Virtucoins) is unlimited. You'll never have to worry about demonetization again. </p>
+                  <p class="m_bottom_23">The potential to earn money (Virtucoins) is unlimited. Choose your pay structure and start streaming. You'll never have to worry about being unfairly demonetized again. </p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -36,7 +36,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Anti-censorship</h5>
-                  <p class="m_bottom_23">The VirtuTV platform is completely decentralized. So you'll never have to worry about your content being removed or your breaking story (For journalists) being censored.</p>
+                  <p class="m_bottom_23">The VirtuTV platform is completely decentralized. So you'll never have to worry about your content being unjustly censored.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -47,7 +47,7 @@
                   <i class="icon-rocket tr_all"></i>
                 </div>
                 <figcaption>
-                  <h5 class="color_dark m_bottom_15">Share your content</h5>
+                  <h5 class="color_dark m_bottom_15">Get Paid To Stream</h5>
                   <p class="m_bottom_23">Content is shareable via social media to extend the reach to millions of people quickly; creators also have their own profile news feed.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_purple_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
@@ -62,8 +62,8 @@
                   <img src="images/ETH.png">
                 </div>
                 <figcaption>
-                  <h5 class="color_dark m_bottom_15">Ethereum Network</h5>
-                  <p class="m_bottom_23">Virtucoins use Ethereum's smart contract technology. The ledger is public and immutable.</p>
+                  <h5 class="color_dark m_bottom_15">P2P</h5>
+                  <p class="m_bottom_23">VirtuTV is built with Ethereum's smart contract technology. Users on the VirtuTV platform are connected to nodes on the Etheruem network. </p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -75,7 +75,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Anonymity</h5>
-                  <p class="m_bottom_23">Creators' can remain anonymous on the VirtuTV platform, and may receive Virtucoins completely anonymously as well. An excellent feature for citizen and investigative journalists, creators' can set bounties on their content, break the story, and collect their rewards.</p>
+                  <p class="m_bottom_23">Creators' can remain anonymous on the VirtuTV platform. An excellent feature for citizen and investigative journalists, creators' can collect their rewards without revealing their identity.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -86,8 +86,8 @@
                   <i class="icon-trophy tr_all"></i>
                 </div>
                 <figcaption>
-                  <h5 class="color_dark m_bottom_15">Earnings</h5>
-                  <p class="m_bottom_23">Our mission is to treat creators' fairly. Creators' keep 95% of the money they earn on the VirtuTV platform. </p>
+                  <h5 class="color_dark m_bottom_15">Earn More</h5>
+                  <p class="m_bottom_23">Our mission is to treat creators' fairly. That's why creators' keep 95% of the money they earn on the VirtuTV platform. Forever. </p>
                 </figcaption>
               </figure>
             </div>
@@ -109,8 +109,8 @@
             </div>
             <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Our Mission</h3>
-              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV is a decentralized video platform that gives creators of all backgrounds the ability to earn a living without restrictions from editors, employers, or advertisers. Creators' can maintain their anonymity on the platform and contribute to other creators'.</p>
-              <p class="fs_large fw_light m_bottom_45 color_light">We believe that video content and information should be censorship-free. That's why we created VirtuTV to be censorship resistant.</p>
+              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV gives creators' the potential to earn money by streaming their videos: It's an ecosystem rather than a monopoly. There are no restrictions from editors, employers, video sharing services or advertisers. </p>
+              <p class="fs_large fw_light m_bottom_45 color_light">We believe that video content and information should be censorship-free. That's why we created VirtuTV on a decentralized, P2P network.</p>
               <a href="#" class="color_green fs_medium button_type_3 tr_all r_corners tt_uppercase d_inline_b">Download Whitepaper</a>
             </div>
           </div>
@@ -120,7 +120,7 @@
       <section class="section_offset bg_light_2 p_bottom_0">
         <div class="container t_align_c">
           <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
-          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for journalists', video bloggers, and podcasters. VirtuTV is built using blockchain technology and its smart contracts are deployed on the Ethereum Network. The content will never be deleted or edited. </p>
+          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for journalists, video bloggers, and podcasters. </p>
           <div class="relative screens">
             <img class="layer_2" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="600" width="60%" height="80%">
 
@@ -141,7 +141,7 @@
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>ERC20 Standard Ethereum Token</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>VirtuTV Tokens are distributed <strong class="color_light">by smart contract</strong></li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Symbol Name: VRTU</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 80% To Users</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 30% Offered For Crowdsale</li>
                   </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 m_bottom_15">
@@ -149,7 +149,7 @@
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>100,000,000 Tokens in Total Supply</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Unadjustable Total Supply</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Price Per Token: 1 ETH = 160 VRTU</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 20% To The VirtuTV Team</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 50% Offered To Early Adopters</li>
                   </ul>
                 </div>
               </div>
@@ -164,16 +164,16 @@
           <div class="row">
             <div class="col-lg-5 col-md-4" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
               <h3 class="color_dark fw_light m_bottom_40 m_xs_top_0">Features</h3>
-              <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for various cryptocurrencies, creator profiles, and the option to set pricing for your content. Other features include social media sharing for you to reach more people. </p>
+              <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for various cryptocurrencies, creator profiles, and the option to set pricing for your content. Users get paid for streaming content. </p>
 
               <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Tokens</h5>
-              <p class="fs_large m_bottom_45 fw_light">The VirtuTV platform will include support for the ETH, BTC and VRTU cryptocurrencies. </p>
+              <p class="fs_large m_bottom_45 fw_light">The VirtuTV platform will include support for Ether, Bitcoin and Virtucoin. </p>
 
               <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
-              <p class="fs_large m_bottom_45 fw_light">The platform will be the home for ad-free, high-quality videos. Some of the features of the platform include unlimited video uploads, user profile and dashboard, private link sharing, priority support, and much more. </p>
+              <p class="fs_large m_bottom_45 fw_light">Some of the features of the platform include an online waller, unlimited video uploads, a user profile and dashboard, private link sharing, priority support, and much more. </p>
 
               <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization</h5>
-              <p class="fs_large m_bottom_45 fw_light">Perpetually monetize any video in seconds. VirtuTV uses the innate power of the crowd to crowdfund creator videos. Creators' have three options for video monetization: price setting of the content, receiving rewards on a one-time, direct, peer-to-peer basis, and receiving rewards per time interval i.e., monthly.</p>
+              <p class="fs_large m_bottom_45 fw_light">Perpetually monetize any video in seconds. Creators' can be compensated in three ways: price setting content, receiving rewards on a one-time, peer-to-peer basis, and receiving rewards per time interval i.e., monthly.</p>
 
             </div>
             <div class="col-lg-7 col-md-7" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
